--- a/tests/Makefile
+++ b/tests/Makefile
@@ -12,8 +12,9 @@ UNITY_SRC_DIR = ./Unity-2.6.1/src
 UNITY_O = $(UNITY_SRC_DIR)/unity.c
 
 # compile and run just the desired file and its test
+# pull function refference from project's .h file instead of $(SRC_DIR)/$(*).c
 %:
-	$(CC) test_$(*).c $(SRC_DIR)/$(*).c $(UNITY_O)
+	$(CC) test_$(*).c $(UNITY_O) -I ../*.h
 	./a.out
 
 clean:
